syntax = "proto3";
package live;
option go_package = "api";
import "google/protobuf/timestamp.proto";

message AddReq {
  uint32 txID = 1;
  uint32 roomID = 2;
  uint32 goodID = 3;
  uint32 txTurnover = 4;
  google.protobuf.Timestamp txTime = 5;
  uint32 userID = 6;
}

message DeleteReq {
  uint32 txID = 1;
}
message QueryTurnoverByRoomIDReq {
  uint32 roomID = 1;
}

message BaseResp {
  string msg = 1;
}

message QueryTurnoverByRoomIDResp {
  uint32 turnover = 1;
}

service Live {
  rpc AddTxByID (AddReq) returns (BaseResp){}
  rpc DeleteTxByID (DeleteReq) returns (BaseResp){}
  rpc QueryTurnoverByRoomID (QueryTurnoverByRoomIDReq) returns (QueryTurnoverByRoomIDResp){}
}